force-app/main/default/objects/Case_Owner__c/Case_Owner__c.object-meta.xml
<CustomObject>
    <description>This object will contain the details of the Case Owner for specific categories.</description>
    <label>Case Owner</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Case Owner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>