force-app/main/default/objects/Case_Owner__c/fields/Hostel_Block__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Block__c</fullName>
    <label>Hostel Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>G1</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>G3</fullName>
            </value>
            <value>
                <fullName>RBS</fullName>
            </value>
            <value>
                <fullName>All Blocks</fullName>
                <isActive>false</isActive>
                <label>All Blocks</label>
            </value>
            <value>
                <fullName>C &amp; RBS BOYS</fullName>
                <isActive>false</isActive>
                <label>C &amp; RBS BOYS</label>
            </value>
            <value>
                <fullName>G3 &amp; RBS GIRLS</fullName>
                <isActive>false</isActive>
                <label>G3 &amp; RBS GIRLS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>