force-app/main/default/objects/Case_Owner__c/fields/INFRA_Category__c.field-meta.xml
<CustomField>
    <fullName>INFRA_Category__c</fullName>
    <label>INFRA Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Housekeeping and Shifting</fullName>
            </value>
            <value>
                <fullName>Printing, Boards and Stationary</fullName>
            </value>
            <value>
                <fullName>Public Address Equipments</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Security, faculty and Student ID card, Lanyard</fullName>
            </value>
            <value>
                <fullName>Guest House</fullName>
            </value>
            <value>
                <fullName>Mess and Food</fullName>
            </value>
            <value>
                <fullName>Student and Staff Dicipline maintenance</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>