force-app/main/default/objects/Case_Owner__c/fields/INFRA_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>INFRA_Sub_Category__c</fullName>
    <label>INFRA Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>INFRA_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water Leakage</fullName>
            </value>
            <value>
                <fullName>No water &amp; low water pressure</fullName>
            </value>
            <value>
                <fullName>Hot water problem</fullName>
            </value>
            <value>
                <fullName>Commode Urinals, washbasin problem</fullName>
            </value>
            <value>
                <fullName>Other washroom &amp; rest room related works</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Window, Door, Storage Cupboard, Desk, Stool, Chair, false ceiling, locks, Mirror &amp; Staff &amp; student workstation &amp; other furniture repair</fullName>
            </value>
            <value>
                <fullName>Wall Cracks</fullName>
            </value>
            <value>
                <fullName>Broken tiles</fullName>
            </value>
            <value>
                <fullName>Wall Seepage problem</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>New construction facility related works</fullName>
            </value>
            <value>
                <fullName>Mike, Speaker</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Socket</fullName>
            </value>
            <value>
                <fullName>Fan</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Geyser</fullName>
            </value>
            <value>
                <fullName>UPS problem</fullName>
            </value>
            <value>
                <fullName>Electricity Problem</fullName>
            </value>
            <value>
                <fullName>New Electricity facility requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>