force-app/main/default/objects/Case_Owner__c/fields/L1_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>L1_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1 Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>