force-app/main/default/objects/Case_Owner__c/fields/L3_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>L3_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3 Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>L3_Case_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>