force-app/main/default/objects/Case_Owner__c/fields/L4_Escalation_Duration__c.field-meta.xml
<CustomField>
    <fullName>L4_Escalation_Duration__c</fullName>
    <label>L4 Escalation Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
            <value>
                <fullName>36 Hours</fullName>
            </value>
            <value>
                <fullName>48 Hours</fullName>
            </value>
            <value>
                <fullName>72 Hours</fullName>
            </value>
            <value>
                <fullName>96 Hours</fullName>
            </value>
            <value>
                <fullName>144 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>