force-app/main/default/objects/Case_Owner__c/recordTypes/Hostel_Case_Owner.recordType-meta.xml
<RecordType>
    <fullName>Hostel_Case_Owner</fullName>
    <active>true</active>
    <label>Hostel Case Owner</label>
</RecordType>