force-app/main/default/objects/Case_Owner__c/recordTypes/INFRA_Case_Owner.recordType-meta.xml
<RecordType>
    <fullName>INFRA_Case_Owner</fullName>
    <active>true</active>
    <label>INFRA Case Owner</label>
</RecordType>