force-app/main/default/objects/Case_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>INFRA_Category__c</columns>
    <columns>Hostel_Block__c</columns>
    <columns>Hostel_Category__c</columns>
    <columns>Hostel_Sub_Category__c</columns>
    <columns>L1_Case_Owner__c</columns>
    <columns>L2_Case_Owner__c</columns>
    <columns>L3_Case_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>