force-app/main/default/objects/Case_Owner__c/listViews/Infra_case_owner.listView-meta.xml
<ListView>
    <fullName>Infra_case_owner</fullName>
    <columns>NAME</columns>
    <columns>INFRA_Category__c</columns>
    <columns>INFRA_Sub_Category__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Owner__c.INFRA_Case_Owner</value>
    </filters>
    <label>Infra case owner</label>
</ListView>